version upgrade and pom simplification